--- a/Homework1/index.html
+++ b/Homework1/index.html
@@ -1,29 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 
 <body>
+
 	<header>
 		<center>
 			<img src="endava.jpg">
 		</center>
 
-		<nav>
+		<nav>	
 			<li>Home</li>
-  			<li>Work</li>
-  			<li>Contact</li>
+			<li>Work</li>
+			<li>Contact</li>
+			<li>
+				<div><img src="twitter.png"></div>
+			</li>
+			<li>
+				<div><img src="facebook.png"></div>
+			</li>
 		</nav>
 	</header>
 
-	<div>
-		<img src="keyboard.jpg">
-	</div>
-	<div>
-		LATEST WORK
-	</div>
+	<div class="content">
+		<div>
+			<img src="keyboard.jpg">
+		</div>
 
+		<div class="line">
+			<img src="line.png">
+			<div>LATEST WORK</div>
+			<img src="line.png">
+		</div>
+		<div>
+			<img src="keyboard.jpg">
+			<img src="keyboard.jpg">
+			<img src="keyboard.jpg">
+		</div>
+
+		<div>
+			<img src="line.png">
+			<div>WHO ARE WE?</div>
+		</div>
+
+		<div>
+			Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+		</div>
+
+	</div>
 	<footer>
 		
 	</footer>
