--- a/UI/Homework1/index.html
+++ b/UI/Homework1/index.html
@@ -8,7 +8,7 @@
 <body>
 
 	<header>
-		<center>
+		<center id ="logo">
 			<img src="endava.jpg">
 		</center>
 
@@ -26,11 +26,11 @@
 	</header>
 
 	<div class="content">
-		<div>
+		<div id="main_image">
 			<img src="keyboard.jpg">
 		</div>
 
-		<div class="line">
+		<div class="line" id="line1">
 			<img src="line.png">
 			<div>LATEST WORK</div>
 			<img src="line.png">
