--- a/UI/Homework1/index.html
+++ b/UI/Homework1/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="mystyle.css">
+	<meta charset="utf-8">
 </head>
 
 <body>
@@ -12,10 +14,10 @@
 			<img src="endava.jpg">
 		</center>
 
-		<nav>	
-			<li>Home</li>
-			<li>Work</li>
-			<li>Contact</li>
+		<nav class="line" id= "line0">	
+			<li><a href="url">Home</a></li>
+			<li><a href="url">Work</a></li>
+			<li><a href="url">Contact</a></li>
 			<li>
 				<div><img src="twitter.png"></div>
 			</li>
@@ -25,34 +27,56 @@
 		</nav>
 	</header>
 
-	<div class="content">
+	<div id="content">
 		<div id="main_image">
 			<img src="keyboard.jpg">
 		</div>
 
-		<div class="line" id="line1">
+		<div class="line col-xs-12" id="line1">
 			<img src="line.png">
 			<div>LATEST WORK</div>
 			<img src="line.png">
 		</div>
-		<div>
+		<div id="pic">
 			<img src="keyboard.jpg">
 			<img src="keyboard.jpg">
 			<img src="keyboard.jpg">
 		</div>
 
-		<div>
+		<div class="line" id="line2">
 			<img src="line.png">
-			<div>WHO ARE WE?</div>
+			<p>WHO ARE WE?</p>
 		</div>
 
-		<div>
+		<p id="text1">
 			Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-		</div>
+		</p>
 
+		<div id="line3">
+			<div id="col1">
+				<img src="line.png" class="line">
+				<img src="arc.png">
+				<p id="text1">
+			Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+				</p>
+			</div>
+			<div id="col2"></div> 
+			<div id="col3">
+				<img src="line.png" class="line">
+				<img src="rotita.png">
+				<p id="text1">
+			Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+				</p>
+			</div>
+		</div>
 	</div>
 	<footer>
-		
+		<nav>
+			<li>@2016 Ednava Graduates</li>
+			<li><a href="url">Home</a></li>
+			<li><a href="url">Work</a></li>
+			<li><a href="url">Contact</a></li>
+		</nav>
 	</footer>
 </body>
-</html>																																																																																																																																																					
+</html>					
